Bug 1824608: Removed extra margin conditions from 'Default Theme' scss
- causing the 'Accept/Decline' button sit 13px higher than the correct position
- font size difference changed in another bug

behatnotneeded

--- a/htdocs/theme/default/sass/components/_list-group.scss
+++ b/htdocs/theme/default/sass/components/_list-group.scss
@@ -20,7 +20,7 @@
     .list-group-item-controls,
     .btn-action-list,
     .list-group-item-heading {
-        .btn-group-top {
+        &.btn-group-top {
             @include media-breakpoint-up(lg) {
                 margin-top: -13px;
             }
